# Packrat

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
packrat/: __init__.py  __main__.py  archive.py  cli.py  images.py  store.py  tui.py
